[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rehab-strength"
version = "2.5.1"
description = "Analítica personal de workouts, sueño y recuperación tras un ACV"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "POLUX89" }]

dependencies = [
    "pandas>=2.3",
    "numpy>=2.0",
]

[project.optional-dependencies]
# Solo hace falta para correr la ingesta; la app desplegada no lo necesita.
ingest = [
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[project.scripts]
rehab-ingest = "rehab_strength.ingest.run_all:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
# El monolito de la app se refactoriza en una fase aparte.
extend-exclude = ["streamlit_app.py", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
