[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rehab-strength"
version = "2.9.0"
description = "Analítica personal de workouts, sueño y recuperación tras un ACV"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "POLUX89" }]

dependencies = [
    "pandas>=2.3",
    "numpy>=2.0",
]

[project.optional-dependencies]
# Solo hace falta para correr la ingesta; la app desplegada no lo necesita.
ingest = [
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[project.scripts]
rehab-ingest = "rehab_strength.ingest.run_all:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
# El monolito de la app se refactoriza en una fase aparte.
extend-exclude = ["streamlit_app.py", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Las tabs son UI migrada del monolito (streamlit_app.py, excluido de ruff). Se
# lintean para todo menos E501: conservan sus líneas largas heredadas (textos de
# ayuda al usuario, llamadas a gráficos) sin reescribir mensajes ni arriesgar el
# comportamiento. El core (helpers, ingest, src) mantiene el estándar completo.
"app/tabs/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "src" para el paquete rehab_strength; "." para los módulos app/ de la app Streamlit.
pythonpath = ["src", "."]
